[tool.poetry]
name = "repl_python3_Flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pytest = "^7.1.2"
google-api-python-client = "^2.47.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
pip-upgrader = "^1.4.15"
requests = "^2.27.1"
oauthlib = "^3.2.0"
pyOpenSSL = "^22.0.0"
Flask-Login = "^0.6.1"
Flask-Dance = "^6.0.0"
credentials = "^1.1"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
gspread = "^5.4.0"
oauth2client = "^4.1.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
